@@ -1,3 +1,6 @@
+2011-10-14 CERDAN Yohann <cerdanyohann@yahoo.fr>
+	* Update the mod1 for 4.3< versions
+	* Add a query to flush errors log
 2011-10-07 CERDAN Yohann <cerdanyohann@yahoo.fr>
 	* Fix for TYPO3 4.6 compatibility
 2011-10-04 CERDAN Yohann <cerdanyohann@yahoo.fr>
